Set button color to avoid blue text on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
 }
 
 .calculator-grid > button {
+    color: black;
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid white;
